syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "./proto";

message UserLoginRequest {
    string email = 1;
    string password = 2;
}

message UserLoginResponse {
    string message = 1;
    string data = 2;
}

message UserResponse {
    uint32 id = 1;
    string name = 2;
    string email = 3;
    string phone_number = 4;
    string password = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    google.protobuf.Timestamp deleted_at = 8;
}

message ResponseGetUsers {
    string message = 1;
    repeated UserResponse users = 2;
}

service Auth{
    rpc Login(UserLoginRequest) returns (UserLoginResponse);
}