syntax = "proto3";

option go_package = "./pb";

message BorrowRequest {
    uint32 book_id = 1;
}

message AuthRequest {
    string email = 1;
    string password = 2;
}

message BorrowResponse {
    uint32 id = 1;
    string borrow_status = 2;
    uint32 user_id = 3;
    string user_name = 4;
    uint32 book_id = 5;
    string book_name = 6;
    uint32 book_quantity = 7;
    string created_at = 8;
    string updated_at = 9;
}

message AuthResponse {
    string message = 1;
    string token = 2;
}

message BorrowBookResponse {
    string message = 1;
    BorrowResponse borrow_response = 2;
}

service BorrowBookService {
    rpc CreateBorrowBook(BorrowRequest) returns (BorrowBookResponse);
}

service AuthService {
    rpc Login(AuthRequest) returns (AuthResponse);
}